# NaughtAgent

./: .gitignore  .prettierignore  2026年4月4日--任务目标.md  BUG-001.md  CHANGELOG.md  CLAUDE.md  Log.txt  MIGRATION_PLAN.md  NAUGHTY.md  NAUGHTYAGENT.md  README.md  TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TODO.md  cyberpunk-pomodoro.html  eslint.config.mjs  init问题.md  justfile  log  na-start.bat  package-lock.json  package.json  pnpm-lock.yaml  run-vscode-e2e.bat  test-model.sh  需求.md
.claude/: settings.local.json
.kiro/: trigger-save-and-new.txt
.kiro/hooks/: multi-agent-discuss.kiro.hook
.kiro/memory/: index.md
.kiro/steering/: agent-learning-guide.md  dev-workflow.md  product.md  project-rules.md  spec-workflow.md  structure.md  tech.md
.learnings/: ERRORS.md  LEARNINGS.md
.spec/: project.md
.spec/sdd/: README.md  progress.md  testing.md
Agent相关/: AI协作开发指南.md  零散笔记.md
Skills/code-review/: SKILL.md
Skills/experience-distiller/: SKILL.md
SnapMind-v2.0.0/: README.md  install.ps1
SnapMind-v2.0.0/mcp-server/: README.md  pyproject.toml  test_server.py
SnapMind-v2.0.0/mcp-server/snapmind_mcp/: __init__.py  __main__.py  server.py
docs/: README.md  integration-test.md  opencode-architecture.md  test-tutorial.md  zed-ai-philosophy.md
docs/Project/: README.md  (+19 more)
scripts/: discuss-config.example.json  discuss-ui-flicker.json  discussion-output.md  multi-agent-discuss.steering.md  multi-agent-discuss.ts  package.json  parse-webview-script.mjs  run-discuss.mjs  run-vscode-e2e.bat  test-question.mjs  test-vscode-smoke.ps1
(+222 files in other folders)
