[project]
name = "snapmind-mcp-server"
version = "2.0.06"
description = "SnapMind MCP Server - AI Memory System for Kiro/Cursor/Windsurf"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
snapmind-mcp-server = "snapmind_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snapmind_mcp"]
